--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 						<div class="owl-carousel owl-carousel-carousel">
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/ZomGame1.jpg" alt="" class="img-responsive"></a>
+									<a href="#"><img src="Images/ZomGame1.jpg" alt="" class="img-responsive"></a>
 									<h2><a href="#">Last Person Standing</h2></a>
 									<p class="role">Zombie Survival Game</p>
 								</div>
 							</div>
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/Vec2Game.JPG" alt="" class="img-responsive"></a>
+									<a href="#"><img src="Images/Vec2Game.JPG" alt="" class="img-responsive"></a>
 									<h2><a href="#">Vectors Unknown</h2></a>
 									<p class="role">Linear Algebra Game</p>
 								</div>
@@ -115,14 +115,14 @@
 
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/Egg.jpg" alt="" class="img-responsive"></a>
+									<a href="#"><img src="Images/Egg.jpg" alt="" class="img-responsive"></a>
 									<h2><a href="#">The Egginator</h2></a>
 									<p class="role">Game Character</p>
 								</div>
 							</div>
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/CPI.jpg" alt="" class="img-responsive"></a>
+									<a href="#"><img src="Images/CPI.jpg" alt="" class="img-responsive"></a>
 									<h2><a href="#">Game Engine Demonstration</h2></a>
 									<p class="role">Zombie Shooter</p>
 								</div>
